# DAQ-Technical-Assessment

./: .gitignore  .gitmodules  brainstorming.md
firmware/: Dockerfile  answer.txt  docker-compose.yml  eligible_products.xlsx
firmware/solution/: CMakeLists.txt  main  main.cpp  stage4.cpp
firmware/tests/: calculationcheck.cpp  canframecheck.cpp  errorhandling.cpp  idhandling.cpp  sensorvaluecheck.cpp  testmain  testmain.cpp
